feat(controller): Fines.java components are functionality